--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A telegram bot to give you notifications about ongoing raids in Pokemon Go around your location",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [
     "pogo",
