--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">= 7.6.0"
+  },
   "keywords": [
     "pogo",
     "telegram",
